@@ -53,6 +53,12 @@
   <p class="test">Test paragraph 4 inside of container</p>
 </div>
 
+<div>
+  <div><a href="test1.html">some text 1</a></div>
+  <div id="test-adjacent"><a href="test2.html">some text 2</a></div>
+  <div><a href="test3.html">some text 3</a></div>
+</div>
+
 <div id="testdiv">to be updated</div>
 <div id="testdiv-replace-container-1"><div id="testdiv-replace-1"></div></div>
 <div id="testdiv-replace-container-2"><div id="testdiv-replace-2"></div></div>
