@@ -1,3 +1,5 @@
+* Ensure Element#adjacent matches the css expression against siblings and not children of siblings. [#244 state:resolved] [jddalton, Jean-Philippe]
+
 * Ensure Element#descendants always returns an array. [#373 state:resolved] [kangax]
 
 * Optimize Event.pointerX() and Event.pointerY() to calculate one coordinate instead of both. [#403 state:resolved] [jddalton, Nick Stakenburg]
